--- a/frontend/src/components/styles/resourceChartGroup.css
+++ b/frontend/src/components/styles/resourceChartGroup.css
@@ -25,24 +25,10 @@
   font-size: 16px;
   font-weight: 600;
   cursor: pointer;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 6px rgb(0 0 0 / 10%);
   transition:
     background-color 0.3s ease,
     box-shadow 0.3s ease;
-}
-
-.chart-scale-button-group-wrapper .button-group-button {
-  background-color: lightgray;
-  width: 100px;
-}
-
-.button-group-button:hover {
-  background-color: #2980b9; /* Slightly darker green */
-  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
-}
-
-.chart-scale-button-group-wrapper .button-group-button:hover {
-  background-color: gray;
 }
 
 .button-group-button:first-child {
@@ -55,9 +41,23 @@
   border-bottom-right-radius: 10px;
 }
 
+.chart-scale-button-group-wrapper .button-group-button {
+  background-color: lightgray;
+  width: 100px;
+}
+
+.button-group-button:hover {
+  background-color: #2980b9; /* Slightly darker green */
+  box-shadow: 0 6px 8px rgb(0 0 0 / 15%);
+}
+
+.chart-scale-button-group-wrapper .button-group-button:hover {
+  background-color: gray;
+}
+
 .button-group-button.active {
   background-color: #1f6395;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 4px rgb(0 0 0 / 10%);
 }
 
 .chart-scale-button-group-wrapper .button-group-button.active {
